# vilbot-main

./: .gitignore  Cargo.toml
src/: constants.rs  main.rs  utils.rs
src/bot_commands/: hottake.rs  mod.rs
