[package]
name = "vilbot-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
fern = "0.6"
futures-lite = "1.12.0"
lapin = "2.1.1"
log = "0.4"
once_cell = "1.13.0"
reqwest = { version = "0.11", features = ["json"] }
serenity = { version = "0.11", features = ["framework", "standard_framework"] }
tokio = { version = "1.19.2", features = ["full"] }
yaml-rust = "0.4.5"
